Fix favicon (too big)

--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -36,7 +36,7 @@ h2 {
 button {
   background-color:#564FFF ;
   color: white;
-  border: 0.025px solid #1510B4;
+  border: 0.025em solid #1510B4;
   border-radius: 16px;
   height: 50px;
   line-height: normal;
@@ -52,7 +52,7 @@ button {
 
 button:hover {
   background-color: #1510B4;
-  border: 0.025px solid #FFFFFF;
+  border: 0.025em solid #FFFFFF;
   color: white;
   cursor: pointer;
 }
@@ -65,7 +65,7 @@ button:hover {
 
 #signup:hover button {
   background-color: white;
-  border: 0.025px solid #1510B4;
+  border: 0.025em solid #1510B4;
   color: #1510B4;
 }
 
@@ -144,6 +144,7 @@ thead {
   margin: 0.25em;
 }
 table {
+  display: table;
   table-layout: fixed;
   width: 50%;
   border-collapse: separate;
